--- a/Mobile/GradeBookMobile/GradeBook.Mobile/GradeBook.Mobile/Views/LoginPage.xaml
+++ b/Mobile/GradeBookMobile/GradeBook.Mobile/GradeBook.Mobile/Views/LoginPage.xaml
@@ -67,17 +67,18 @@
             </Grid.RowDefinitions>
             <StackLayout Grid.Row="0">
                 <Label Text="Please enter your account"/>
-                <Entry Text="{Binding Username}"
+                <Entry x:Name="userName"
                        Placeholder="Username"/>
-                <Entry Text="{Binding Password}"
+                <Entry x:Name="password"
                        Placeholder="Password"
                        IsPassword="True"/>
-                <Label Text="Invalid credentials" 
-                       IsVisible="{Binding AreCredentialsInvalid}" 
-                       TextColor="Red"/>
+                <ActivityIndicator x:Name="loading" Text="Loading..." />
             </StackLayout>
-            <Button Grid.Row="2" Text="Login" Command="{Binding SaveCommand}" />
-            <Button Grid.Row="3" Text="Reset" Command="{Binding ResetCommand}" />
+
+            
+            
+            <Button Grid.Row="2" Text="Login" x:Name="saveCommand" />
+            <Button Grid.Row="3" Text="Reset" x:Name="resetCommand" />
         </Grid>
     </ContentPage.Content>
 </ContentPage>
